metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: middleware
  labels:
    app: metabase
spec:
  type: ClusterIP
  selector:
    app: metabase
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
